// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passes generally 1`] = `
Object {
  "rest": "PASS __tests__/manual-within.js
  describe
    ✓ it",
  "summary": "Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /manual-within.js/i.",
}
`;

exports[`throws on deadline exceeded 1`] = `
Object {
  "rest": "FAIL __tests__/manual-exceeded.js
  describe
    ✕ it

  ● describe › it

    deadline exceeded (waited here for <<REPLACED>>)

      12 | describe('describe', () => {
      13 |   it('it', async () => {
    > 14 |     await expect.withinDeadline(sleep(200));
         |     ^
      15 |   }, 50);
      16 | });
      17 | 

      at Object.<anonymous> (__tests__/manual-exceeded.js:14:5)",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /manual-exceeded.js/i.",
}
`;

exports[`throws on deadline exceeded in a describe hook 1`] = `
Object {
  "rest": "FAIL __tests__/manual-exceeded-hook-describe.js
  describe
    ✕ does nothing

  ● describe › does nothing

    deadline exceeded (waited here for <<REPLACED>>)

      12 | describe('describe', () => {
      13 |   beforeAll(async () => {
    > 14 |     await expect.withinDeadline(sleep(200));
         |     ^
      15 |   }, 50);
      16 | 
      17 |   it('does nothing', () => {});

      at __tests__/manual-exceeded-hook-describe.js:14:5",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /manual-exceeded-hook-describe.js/i.",
}
`;

exports[`throws on deadline exceeded in a hook 1`] = `
Object {
  "rest": "FAIL __tests__/manual-exceeded-hook.js
  describe
    ✕ does nothing

  ● describe › does nothing

    deadline exceeded (waited here for <<REPLACED>>)

      12 | describe('describe', () => {
      13 |   beforeEach(async () => {
    > 14 |     await expect.withinDeadline(sleep(200));
         |     ^
      15 |   }, 50);
      16 | 
      17 |   it('does nothing', () => {});

      at Object.<anonymous> (__tests__/manual-exceeded-hook.js:14:5)",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /manual-exceeded-hook.js/i.",
}
`;
